<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_LinearLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	android:focusable="true"
	android:focusableInTouchMode="true">

	<TextView
		android:id="@+id/device_TextView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<TextView
		android:id="@+id/noSupportNotMIUI"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<EditText
		android:id="@+id/height_editText"
		android:hint="@string/edit_text"
		android:gravity="center"
		android:layout_width="wrap_content"
		android:inputType="number"
		android:layout_height="wrap_content"
		android:maxLength="2"
		android:ems="8"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<RadioButton
			android:id="@+id/systemMode_radioButton"
			android:onClick="systemMode_onClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/system_mode"/>

		<RadioButton
			android:id="@+id/magiskMode_radioButton"
			android:onClick="magiskMode_onClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/magisk_mode"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<Button
			android:onClick="change_onClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/change"/>

		<Button
			android:onClick="delete_onClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/delete"/>

	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/mini_tools"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<Button
			android:onClick="superPower_onClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/super_battery"/>

		<Button
			android:onClick="androidPower_onClick"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/android_battery"/>

	</LinearLayout>

	<RadioGroup
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

</LinearLayout>

